Added delete user scope API
