# src/controllers/system-setup-controllers/index.js
@@ -7,6 +7,7 @@ import { getUserScopeById, getAllUserScopes } from './getUserScope.controller.js
 import { updateUserRoleDtl, updateRoleDefault } from './updateUserRole.controller.js';
 import { deleteUserRole } from './deleteUserRole.controller.js';
 import { updateUserScope } from './updateUserScope.controller.js';
+import { deleteUserScope } from './deleteUserScope.controller.js';
 
 export default {
   verifyUserRoleExist,
@@ -21,4 +22,5 @@ export default {
   updateRoleDefault,
   deleteUserRole,
   updateUserScope,
+  deleteUserScope,
 };
