# src/index.js
@@ -30,6 +30,7 @@ class AccountService extends Service {
     this.app.get(`${SVC_API}/setup/scope`, routes.settingRoutes.getUserScope);
     this.app.get(`${SVC_API}/setup/scope/:scopeId`, routes.settingRoutes.getUserScope);
     this.app.put(`${SVC_API}/setup/scope/:scopeId`, routes.settingRoutes.updateUserScope);
+    this.app.delete(`${SVC_API}/setup/scope/:scopeId`, routes.settingRoutes.deleteUserScope);
   }
 }
 
