# src/routes/system-setup-routes/index.js
@@ -7,6 +7,7 @@ import getUserScope from './getUserScope.route.js';
 import updateUserRole from './updateUserRole.route.js';
 import deleteUserRole from './deleteUserRole.route.js';
 import updateUserScope from './updateUserScope.route.js';
+import deleteUserScope from './deleteUserScope.route.js';
 
 export default {
   registerUserRole,
@@ -16,4 +17,5 @@ export default {
   updateUserRole,
   deleteUserRole,
   updateUserScope,
+  deleteUserScope,
 };
